B-F Sandbox Full-Backup/src/objects/Quick_Link__c.object
<CustomObject>
    <description>Tab to help maintain all links surfaced by Quick Links tab</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Used to filter Quick Links</description>
        <inlineHelpText>Where should this Quick Link appear?</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>About Me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisville</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Clicks__c</fullName>
        <inlineHelpText>Stores how many clicks each Quick Link has.</inlineHelpText>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is an external link, add target=&quot;_blank&quot; to the link</description>
        <inlineHelpText>Does this link need to open in a new tab?</inlineHelpText>
        <label>External?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <description>Stores link to image on Salesforce</description>
        <inlineHelpText>Please upload an image to the Documents tab for this Quick Link</inlineHelpText>
        <label>Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_Location__c</fullName>
        <description>Where does this Quick Link go?</description>
        <inlineHelpText>Where does this Quick Link go?</inlineHelpText>
        <label>Link Location</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Text to appear below image</description>
        <inlineHelpText>Text to appear below link image</inlineHelpText>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Quick Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Category__c</columns>
        <columns>Clicks__c</columns>
        <columns>External__c</columns>
        <columns>Link_Location__c</columns>
        <columns>Image_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QL-{00000}</displayFormat>
        <label>Quick Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manage Quick Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>